--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     }
 
     header {
+      position: relative;
+      overflow: hidden;
       background: linear-gradient(135deg, #67b1ee, #4fc3f7);
       color: white;
       padding: 40px 20px;
@@ -35,6 +37,92 @@
     header h3 {
       font-weight: 400;
       margin-top: 10px;
+    }
+
+    /* Rain animation styles */
+    .rain {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 1;
+    }
+
+    .raindrop {
+      position: absolute;
+      top: -10px;
+      width: 2px;
+      height: 10px;
+      background: white;
+      opacity: 0.6;
+      animation: fall 2s infinite linear;
+    }
+
+    @keyframes fall {
+      0% {
+        transform: translateY(0);
+        opacity: 0.6;
+      }
+      100% {
+        transform: translateY(100vh);
+        opacity: 0;
+      }
+    }
+
+    .raindrop:nth-child(1) { left: 10%; animation-delay: 0s; }
+    .raindrop:nth-child(2) { left: 20%; animation-delay: 0.5s; }
+    .raindrop:nth-child(3) { left: 30%; animation-delay: 1s; }
+    .raindrop:nth-child(4) { left: 40%; animation-delay: 1.5s; }
+    .raindrop:nth-child(5) { left: 50%; animation-delay: 2s; }
+    .raindrop:nth-child(6) { left: 60%; animation-delay: 2.5s; }
+    .raindrop:nth-child(7) { left: 70%; animation-delay: 3s; }
+    .raindrop:nth-child(8) { left: 80%; animation-delay: 3.5s; }
+    .raindrop:nth-child(9) { left: 90%; animation-delay: 4s; }
+    .raindrop:nth-child(10) { left: 95%; animation-delay: 4.5s; }
+
+    /* Sun styles */
+    .sun {
+      position: relative;
+      width: 80px;
+      height: 80px;
+      background: radial-gradient(circle, #ffd55c, #f9a602);
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      box-shadow: 0 0 40px #ffc107;
+      flex-shrink: 0;
+      transition: transform 0.3s;
+      z-index: 2; /* Ensure the sun appears above the rain */
+    }
+
+    .sun:hover {
+      transform: scale(1.1) rotate(10deg);
+    }
+
+    .eyes {
+      display: flex;
+      gap: 8px;
+    }
+
+    .eye {
+      width: 18px;
+      height: 18px;
+      background: white;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+    }
+
+    .pupil {
+      width: 6px;
+      height: 6px;
+      background: black;
+      border-radius: 50%;
     }
 
     .content {
@@ -73,77 +161,6 @@
       transform: scale(1.05);
     }
 
-    .causa-efeito {
-      display: none;
-      background: #ffffff;
-      border-left: 5px solid #81c784;
-      padding: 20px;
-      border-radius: 10px;
-      margin-top: 30px;
-      animation: fadeIn 1s ease forwards;
-    }
-
-    .eco-icons {
-      display: flex;
-      justify-content: space-around;
-      margin-top: 40px;
-    }
-
-    .eco-icons div {
-      text-align: center;
-      transition: transform 0.3s;
-    }
-
-    .eco-icons img {
-      width: 80px;
-      margin-bottom: 10px;
-    }
-
-    .eco-icons div:hover {
-      transform: scale(1.1);
-    }
-
-    .sun {
-      position: relative;
-      width: 80px;
-      height: 80px;
-      background: radial-gradient(circle, #ffd55c, #f9a602);
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      box-shadow: 0 0 40px #ffc107;
-      flex-shrink: 0;
-      transition: transform 0.3s;
-    }
-
-    .sun:hover {
-      transform: scale(1.1) rotate(10deg);
-    }
-
-    .eyes {
-      display: flex;
-      gap: 8px;
-    }
-
-    .eye {
-      width: 18px;
-      height: 18px;
-      background: white;
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
-    }
-
-    .pupil {
-      width: 6px;
-      height: 6px;
-      background: black;
-      border-radius: 50%;
-    }
-
     footer {
       background: #263238;
       color: #ccc;
@@ -156,18 +173,24 @@
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
-    @media (max-width: 600px) {
-      .eco-icons {
-        flex-direction: column;
-        gap: 20px;
-      }
-    }
   </style>
 </head>
 <body>
 
   <header>
+    <div class="rain">
+      <!-- Generate raindrops -->
+      <div class="raindrop"></div>
+      <div class="raindrop"></div>
+      <div class="raindrop"></div>
+      <div class="raindrop"></div>
+      <div class="raindrop"></div>
+      <div class="raindrop"></div>
+      <div class="raindrop"></div>
+      <div class="raindrop"></div>
+      <div class="raindrop"></div>
+      <div class="raindrop"></div>
+    </div>
     <h1>Mudanças Climáticas</h1>
     <h3>Um problema que afeta o presente e o futuro</h3>
   </header>
@@ -196,21 +219,6 @@
       <p>- Aquecimento global e aumento do nível do mar</p>
       <p>- Extinção de espécies e colapso de ecossistemas</p>
       <p>- Crises hídricas, alimentares e migratórias</p>
-    </div>
-
-    <div class="eco-icons">
-      <div>
-        <img src="https://img.icons8.com/color/96/000000/earth-planet.png" alt="Planeta Terra"/>
-        <p>Preservar o planeta</p>
-      </div>
-      <div>
-        <img src="https://img.icons8.com/color/96/000000/wind-turbine.png" alt="Energia limpa"/>
-        <p>Usar energia limpa</p>
-      </div>
-      <div>
-        <img src="https://img.icons8.com/color/96/000000/forest.png" alt="Plantar árvores"/>
-        <p>Reflorestar</p>
-      </div>
     </div>
   </div>
 
